--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HTML Form</title>
+        <link rel="stylesheet" href="styles.css">
         <script src="https://kit.fontawesome.com/25c2314df9.js" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
@@ -59,7 +60,7 @@
                 </fieldset>
                 <fieldset>
                   <span class="p-1">We accept:</span><br>
-                  <div class="bg-secondary rounded-3 w-50">
+                  <div class="bg-secondary rounded-3 col-5">
                    <!--  mastercard -->
                     <div class="form-check form-check-inline">
                       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
