--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </fieldset>
                 <fieldset>
                   <span class="p-1">We accept:</span><br>
-                  <div class="bg-secondary rounded-3 col-5">
+                  <div class="bg-secondary rounded-3 col-6">
                    <!--  mastercard -->
                     <div class="form-check form-check-inline">
                       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
@@ -76,10 +76,10 @@
                       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
                       <label class="form-check-label" for="inlineRadio3"><i class="fa-brands fa-cc-diners-club"style="color:white"></i></label>
                     </div>
-                   <!--  apple pay -->
+                   <!--  american express -->
                     <div class="form-check form-check-inline">
                       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
-                      <label class="form-check-label" for="inlineRadio4"><i class="fa-brands fa-cc-apple-pay"style="color:white"></i></label>
+                      <label class="form-check-label" for="inlineRadio4"><i class="fa-brands fa-cc-amex" style="color:white"></i></label>
                     </div>
                   </div>
                 </fieldset>
@@ -114,10 +114,15 @@
                     </div>
                   </div>
               <!-- Mensaje de notas -->
-              <div>
+              <!-- <div>
                 <label for="message" class="p-1">Message</label><br>
                 <textarea name="notes" id="message" style="min-width: 100%; width: 100%;"></textarea><br>
                 <span class="text-secondary p-1">Add any notes here.</span>
+              </div> -->
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <input type="text" readonly class="form-control-plaintext text-secondary" id="notes" value="Add any notes here">
               </div>
             </div>          
 
@@ -127,8 +132,8 @@
             </div>
             <div>
               <div class="d-flex flex-row-reverse gap-1 border-top bg-light py-2  px-3">
-                <button type="button" class="btn btn-primary">Send</button>
-                <button type="button" class="btn btn-secondary">Cancel</button>
+                <button type="submit" class="btn btn-primary">Send</button>
+                <button type="submit" class="btn btn-secondary">Cancel</button>
                 
               </div>
             </div>
