Se agrega nuevamente el mensaje de alerta con bootstrap

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <div class="p-3 m-2">
              <!--  Mensaje de alerta -->
-              <div class="container p-0 rounded-3" style="background-color: #FFE4E1 ; color: #8B0000;">
-                <p class="m-0 p-2 border-2">Some fields are missing</p>
+              <div class="alert alert-danger" role="alert">
+                Some fields are missing
               </div>
               <div class="row d-flex p-2">
                   <div class="col-5">
@@ -114,11 +114,6 @@
                     </div>
                   </div>
               <!-- Mensaje de notas -->
-              <!-- <div>
-                <label for="message" class="p-1">Message</label><br>
-                <textarea name="notes" id="message" style="min-width: 100%; width: 100%;"></textarea><br>
-                <span class="text-secondary p-1">Add any notes here.</span>
-              </div> -->
               <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
